RESOLVED FIXED91000
REGRESSION (r122244): Overflow elements don't shrink as much as they should.
https://bugs.webkit.org/show_bug.cgi?id=91000
Summary REGRESSION (r122244): Overflow elements don't shrink as much as they should.
Dave Hyatt
Reported 2012-07-11 12:33:27 PDT
Regression from https://bugs.webkit.org/show_bug.cgi?id=90646. I incorrectly analyzed the issue with Robert Hogan's negative margin patch and fooled myself into putting back in an incorrect minimum width check from long ago. What should have happened in the test case I patched is that the overflow element should shrink to 0. The issue was that it exposed a bug in our clearing algorithm where you could need a relayout even if you didn't actually move. This only occurs because the floats list is getting changed mid-layout because of negative margins.
Attachments
Patch (7.46 KB, patch)
2012-07-11 12:37 PDT, Dave Hyatt
no flags
Patch (5.93 KB, patch)
2012-07-11 14:22 PDT, Dave Hyatt
no flags
Patch (6.85 KB, patch)
2012-07-12 10:39 PDT, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2012-07-11 12:37:37 PDT
Dave Hyatt
Comment 2 2012-07-11 14:22:35 PDT
Created attachment 151775 [details] Patch New patch for EWS.
Dave Hyatt
Comment 3 2012-07-12 10:39:33 PDT
Simon Fraser (smfr)
Comment 4 2012-07-12 10:43:54 PDT
Comment on attachment 151993 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151993&action=review > Source/WebCore/ChangeLog:23 > + Reviewed by NOBODY (OOPS!). This should go above the description. > Source/WebCore/ChangeLog:25 > + No new tests required, since the test in fast/block/float is now correctly covering the issue. But was that test failing before?
Dave Hyatt
Comment 5 2012-07-12 11:47:12 PDT
Fixed in r122489.
Pavel Feldman
Comment 6 2012-07-13 03:32:31 PDT
*** Bug 90965 has been marked as a duplicate of this bug. ***
Andy Estes
Comment 7 2012-07-13 13:54:32 PDT
*** Bug 91036 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.